@@ -59,10 +59,11 @@ httpclient.proxy-autodetect=true
 ###
 # File/Object comparison properties
 ###
-#filecomparer.use-md5-files=true
-#filecomparer.generate-md5-files=true
-#filecomparer.skip-upload-of-md5-files=true
-#filecomparer.ignore-panic-dir-placeholders=true
+#filecomparer.use-md5-files=false
+#filecomparer.generate-md5-files=false
+#filecomparer.skip-upload-of-md5-files=false
+#filecomparer.ignore-panic-dir-placeholders=false
+#filecomparer.assume-local-latest-in-mismatch=false
 
 ###
 # XML Parsing properties
